--- a/ReponsiveWeb/index.html
+++ b/ReponsiveWeb/index.html
@@ -66,27 +66,27 @@
 			</div>
 			<br>
 
-			<h2><p class="name"><a href="image1.html" >Sư tử Ussoku</a></p></h2>
+			<h2><p class="name"><a href="image1.html" >Lạc đà</a></p></h2>
 			<h5>Title description, Sep 6, 2019</h5>
 			<div class="thumb" id="image1">
 				<a href="image1.html"><img src="img/anhnd2.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
 			</div>
 			<br>
 
-			<h2><p class="name"><a href="image1.html" >Sư tử Ussoku</a></p></h2>
+			<h2><p class="name"><a href="image1.html" >Báo teot</a></p></h2>
 			<h5>Title description, Dec 5, 2019</h5>
 			<div class="thumb" id="image1">
 				<a href="image1.html"><img src="img/anhnd6.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
 			</div>
 			<br>
 
-			<h2><p class="name"><a href="image1.html" >Sư tử Ussoku</a></p></h2>
+			<h2><p class="name"><a href="image1.html" >Dê bạch tuyết</a></p></h2>
 			<h5>Title description, Dec 4, 2019</h5>
 			<div class="thumb" id="image1">
 				<a href="image1.html"><img src="img/anhnd4.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
 			</div>
 			<br>
-			<h2><p class="name"><a href="image1.html" >Sư tử Ussoku</a></p></h2>
+			<h2><p class="name"><a href="image1.html" >Cáo Panda</a></p></h2>
 			<h5>Title description, Dec 4, 2019</h5>
 			<div class="thumb" id="image1">
 				<a href="image1.html"><img src="img/anhnd5.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
