--- a/ReponsiveWeb/index.html
+++ b/ReponsiveWeb/index.html
@@ -1,106 +1,165 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Responsive Wed Design</title>
+	<!-- Required meta tags -->
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Responsive meta tag -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- fontAweSome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<!-- favicon -->
+	<link rel="icon" href="imgAnimal/favicon.ico">
+	<!-- My CSS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<!-- Header -->
-	<header>
-		<div id="banner">
-			<img class="banner" src="img/banner3.jpg">
+	<!-- Top header -->
+	<!-- <div class="top_header">
+		<div class="container">
+			<div class="row">
+				<div class="col-5 col-sm-6">
+                </div>
+				<div class="col-7 col-sm-6">
+                    Updating...
+                </div>
+
+			</div>
 		</div>
-	</header>
-
-	<!-- Navigation Bar -->
-	<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Trang chủ <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Động vật hoang dã</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Động vật quý hiếm</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Côn trùng</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-	<!-- The flexible grid (content) -->
-	<div class="row">
-		<section class="side">
-			<h2>Ảnh đẹp nhất</h2>
-			<div class="imgTop">
-				<a href="image1.html"><img src="img/baiviet2.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br/>
-			<h2>Các ảnh nổi bật khác</h2>
-			<div class="imgTop">
-				<a href="image1.html"><img src="img/baiviet3.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<div class="imgTop">
-				<a href="image1.html"><img src="img/baiviet4.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<div class="imgTop">
-				<a href="image1.html"><img src="img/baiviet5.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-		</section>
-		<section class="main">
-			<h2><p class="name"><a href="image1.html" >Sư tử Ussoku</a></p></h2>
-			<h5>Title description, Dec 7, 2019</h5>
-			<div class="thumb" id="image1">
-				<a href="image1.html"><img src="img/anhnd1.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br>
-
-			<h2><p class="name"><a href="image1.html" >Lạc đà</a></p></h2>
-			<h5>Title description, Sep 6, 2019</h5>
-			<div class="thumb" id="image1">
-				<a href="image1.html"><img src="img/anhnd2.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br>
-
-			<h2><p class="name"><a href="image1.html" >Báo teot</a></p></h2>
-			<h5>Title description, Dec 5, 2019</h5>
-			<div class="thumb" id="image1">
-				<a href="image1.html"><img src="img/anhnd6.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br>
-
-			<h2><p class="name"><a href="image1.html" >Dê bạch tuyết</a></p></h2>
-			<h5>Title description, Dec 4, 2019</h5>
-			<div class="thumb" id="image1">
-				<a href="image1.html"><img src="img/anhnd4.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br>
-			<h2><p class="name"><a href="image1.html" >Cáo Panda</a></p></h2>
-			<h5>Title description, Dec 4, 2019</h5>
-			<div class="thumb" id="image1">
-				<a href="image1.html"><img src="img/anhnd5.jpg" title="Xem chi tiết" class="img-thumbnail"></a>
-			</div>
-			<br>
-		</section>
+	</div> -->
+	<!-- Banner -->
+	<div class="text-center">
+		<img class="banner" src="imgAnimal/banner_pet.jpg">
 	</div>
 
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<a class="navbar-brand" href="#">HOME</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="collapsibleNavbar">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Animal</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Bird</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Dog</a>
+				</li>    
+			</ul>
+			<ul class="nav navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#"><span class="fas fa-user"></span> Sign Up</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#"><span class="fas fa-sign-in-alt"></span> Login</a>
+				</li>
+			</ul>
+		</div>  
+	</nav>
+
+	<!-- Page Content -->
+	<div class="container main">
+
+		<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Gallery Animal</h1>
+
+		<hr class="mt-2 mb-5">
+
+		<div class="row text-center text-lg-left">
+
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh1.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh2.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh3.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh4.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh5.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh6.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh7.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh8.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh9.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh10.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh11.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh12.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh13.jpg" alt="Error">
+				</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh14.jpg" alt="Error">
+				</a>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a href="#" class="d-block mb-4 h-100">
+					<img class="img-fluid img-thumbnail" src="imgAnimal/anh16.jpg" alt="Error">
+				</a>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
 	<!-- Footer -->
 	<footer>
-		<h2>Bán cao hổ cốt, ngà voi,... 06969696696</h2>
+		<div class="jumbotron text-center" style="margin-bottom:0">
+			<p>Made by SunKt_0212</p>
+		</div>
 	</footer>
-
-	<!-- boostrap -->
+	
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
