--- a/xPider/index.html
+++ b/xPider/index.html
@@ -242,6 +242,11 @@
 		</div>
 	</section>
 	<section class="container mt-150">
+		<h1 style="text-align: center;s">Loading...</h1>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div class="block row ml-10p mr-10p">
 			<div class="col-lg-6">
 				<h4>1500+ Unique Blocks</h4>
@@ -252,7 +257,7 @@
 				<img src="img/Block-image.png">
 			</div>
 		</div>
-
+		
 		<div>
 			<h2>You’re in a good hand</h2>
 			<p>Millions of people around the world have already made xPider the place where their dream happens.</p>
