--- a/xPider/index.html
+++ b/xPider/index.html
@@ -242,7 +242,7 @@
 		</div>
 	</section>
 	<section class="container mt-150">
-		<h1 style="text-align: center;s">Loading...</h1>
+		<h1 style="text-align: center;">Loading...</h1>
 		<br>
 		<br>
 		<br>
