--- a/xPider/index.html
+++ b/xPider/index.html
@@ -14,6 +14,7 @@
 	<link rel="shortcut icon" type="image/png" href="img/net.png">
 
 	<!-- My CSS -->
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
