--- a/Kiemtra/index.html
+++ b/Kiemtra/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Name Web</title>
+	<title>Creative Startup</title>
 	<!-- Required meta tags -->
 	<meta charset="UTF-8">
 	<!-- Responsive meta tag -->
