--- a/Kiemtra/index.html
+++ b/Kiemtra/index.html
@@ -295,7 +295,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -303,7 +303,7 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
 
 							</div>
@@ -318,7 +318,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -326,7 +326,7 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
 
 							</div>
@@ -341,7 +341,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -349,7 +349,7 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
 
 							</div>
@@ -367,7 +367,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -375,7 +375,7 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
 
 							</div>
@@ -390,7 +390,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -398,7 +398,7 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
 
 							</div>
@@ -413,7 +413,7 @@
 							<div class="row pt-1">
 								<div class="card-left d-flex">
 									<div>
-										<img class="avatar" src="images/photo.png">
+										<img class="avatar pr-2" src="images/photo.png">
 									</div>
 
 									<div>
@@ -421,9 +421,8 @@
 									</div>
 								</div>
 								<div class="card-right">
-									<p class="card-text"><i class="far fa-clock"></i>25MIN AGO</p>
+									<p class="card-text"><i class="far fa-clock pr-2"></i>25MIN AGO</p>
 								</div>
-
 							</div>
 
 
