--- a/Kiemtra/index.html
+++ b/Kiemtra/index.html
@@ -478,7 +478,8 @@
 							<p>Drag and drop a file  or</p>
 						</div>
 						<div class="upload_link">
-							<a class="upload_link_text" href="#">Search a file</a>
+							<label for="files" class="upload_link_text">Search a file</label>
+							<input id="files" style="display:none;" type="file">
 							<hr>
 						</div>
 					</div>
@@ -575,6 +576,7 @@
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script type="text/javascript" src="script.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
