--- a/Kiemtra/index.html
+++ b/Kiemtra/index.html
@@ -550,7 +550,12 @@
 
 				</div>
 				<div class="col_content col-md-2 col-sm-4 col-4 pt-5r">
-					<a href="#"><p>English&nbsp&nbsp&nbsp<i class="fas fa-chevron-down"></i></p></a>
+					<!-- <a href="#"><p>English&nbsp&nbsp&nbsp<i class="fas fa-chevron-down"></i></p></a> -->
+					<select>
+						<option value="volvo">English</option>
+						<option value="saab">VN</option>
+						<option value="opel">Japan</option>
+					</select>
 
 				</div>
 				<div class="col_content col-md-2 col-sm-4 col-4 d-flex pt-5r">
