--- a/yummy/index.html
+++ b/yummy/index.html
@@ -99,30 +99,30 @@
   <div class="list_image">
     <div class="child-page-listing">
       <div class="grid-container">
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></a></div>
         </article>
       </div>
       <div class="grid-container">
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img6.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img7.jpg" alt="Xem chi tiết"></a></div>
         </article>
-        <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <article class="location-listing" id="3685"><a class="location-title" href="#">Bít tết Wanju</a>
           <div class="location-image"><a href="#"><img width="300" height="169" src="images/home_Page/img8.jpg" alt="Xem chi tiết"></a></div>
         </article>
       </div>
