--- a/yummy/index.html
+++ b/yummy/index.html
@@ -63,14 +63,45 @@
       <div class="container-fluid">
         <h1 class="chef_heading">
            Đầu bếp <span style="color:black;">của chúng tôi</span></h1>
-        <div class="chef_content row">
-          <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
-          <div class="col-8 name_chef">
-            <p class="name">Kano Kun</p>
-            <p class="role">Bếp trưởng</p>
+      </div>
+      <div class="carousel slide" id="carouselExampleIndicators" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li class="active" data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="chef_content row">
+              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
+              <div class="col-8 name_chef">
+                <p class="name">Kano Kun</p>
+                <p class="role">Bếp trưởng</p>
+              </div>
+            </div>
+            <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!   </p>
+          </div>
+          <div class="carousel-item">
+            <div class="chef_content row">
+              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
+              <div class="col-8 name_chef">
+                <p class="name">Kano Kun</p>
+                <p class="role">Bếp trưởng</p>
+              </div>
+            </div>
+            <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!</p>
+          </div>
+          <div class="carousel-item">
+            <div class="chef_content row">
+              <div class="col-4 avatar_chef"><img src="images/home_Page/chef_small.png" alt="chef"></div>
+              <div class="col-8 name_chef">
+                <p class="name">Kano Kun</p>
+                <p class="role">Bếp trưởng</p>
+              </div>
+            </div>
+            <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!        </p>
           </div>
         </div>
-        <p class="content">Với 20 năm kinh nghiệm của mình ở các nước trên toàn thế giới, tôi sẽ mang tới những hương vị tuyệt vời nhất cho bạn!    </p>
       </div>
     </div>
     <div class="col-6 chef_image"><img src="images/home_Page/chef_big.png" alt="chef"></div>
