--- a/yummy/shop.html
+++ b/yummy/shop.html
@@ -77,6 +77,17 @@
   </div>
 </section>
 <section class="section_2 container-fluid">
+  <div class="top_section_2">
+    <div class="row top_area">
+      <div class="dropdown">
+        <button class="btn dropdown-toggle" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tất cả các món</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#">Món tráng miệng</a><a class="dropdown-item" href="#">Món chính   </a></div>
+      </div>
+      <div class="search ml-auto">
+        <input class="form-control" id="myInput" type="text" placeholder="Tìm kiếm..">
+      </div>
+    </div>
+  </div>
   <div class="card_main">
     <div class="card-deck">
       <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
@@ -141,28 +152,26 @@
 <!--footer-->
 <footer class="container-fuild">
   <div class="top_footer">
-    <h1 class="title">Ảnh này phần footer</h1>
-    <div class="slider" id="single_item" data-slick="{&quot;slidesToShow&quot;: 4, &quot;slidesToScroll&quot;: 4}">
+    <h1 class="text-center title">INSTARGRAM</h1>
+    <hr>
+    <div class="slider" id="single_item">
+      <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
       <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
       <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
       <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
       <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
       <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
     </div>
-    <h1 class="title_2">Ảnh này phần chi tiết sản phẩm</h1>
-    <div class="slider-for">
-      <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
-    </div>
-    <div class="slider-nav">
-      <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
-      <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
+  </div>
+  <div class="row main_footer">
+    <div class="col-6 logo">yummy</div>
+    <div class="col-6 right_area">
+      <div class="network d-flex flex-row-reverse"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
+      <div class="make_by d-flex flex-row-reverse">© 2019 YUMMY. MAKED BY NHATMINH</div>
     </div>
   </div>
 </footer>
