--- a/yummy/about.html
+++ b/yummy/about.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- fontAweSome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <!--slick-->
+  <link rel="stylesheet" type="text/css" href="js/slick/slick.css">
+  <!-- Add the new slick-theme.css if you want the default styling-->
+  <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css">
   <!-- icon-->
   <link rel="icon" href="images/favicon.ico">
   <!-- Fonts-->
@@ -71,10 +75,15 @@
     </div>
   </div>
   <div class="child-page-listing">
-    <h2>Our Locations</h2>
     <div class="grid-container">
       <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
         <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef1.jpg" alt="Xem chi tiết"></a></div>
+      </article>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Xem chi tiết"></a></div>
+      </article>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef3.jpg" alt="Xem chi tiết"></a></div>
       </article>
       <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
         <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Xem chi tiết"></a></div>
@@ -201,7 +210,10 @@
 </footer>
 <!-- Optional JavaScript-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS-->
-<script type="text/javascript" src="js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- slick-->
+<script type="text/javascript" src="js/slick/slick.min.js"></script>
+<script type="text/javascript" src="./js/footer2.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
