--- a/yummy/about.html
+++ b/yummy/about.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Yummy Restaurant</title>
+  <title>Yummy Restaurant - Giới thiệu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,7 +13,7 @@
   <!-- Add the new slick-theme.css if you want the default styling-->
   <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css">
   <!-- icon-->
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/core_img/favicon.ico">
   <!-- Fonts-->
   <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Poppins|Prata&amp;display=swap" rel="stylesheet">
