--- a/yummy/index.html
+++ b/yummy/index.html
@@ -9,7 +9,7 @@
   <!-- fontAweSome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <!-- icon-->
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/core_img/favicon.ico">
   <!-- Fonts-->
   <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Poppins|Prata&amp;display=swap" rel="stylesheet">
