--- a/yummy/shop.html
+++ b/yummy/shop.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Yummy Restaurant</title>
+  <title>Yummy Restaurant - Cửa hàng</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,7 +13,7 @@
   <!-- Add the new slick-theme.css if you want the default styling-->
   <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css">
   <!-- icon-->
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/core_img/favicon.ico">
   <!-- Fonts-->
   <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Great+Vibes|Poppins|Prata&amp;display=swap" rel="stylesheet">
@@ -89,61 +89,117 @@
     </div>
   </div>
   <div class="card_main">
-    <div class="card-deck">
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+    <div class="card-deck row">
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp5.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp1.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card-deck">
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp3.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp4.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
-        <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
-            <hr>
-          </p>
-          <p class="card-text price text-center">50.000 VND</p>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp6.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp7.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">      
+        <div class="card">
+          <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp8.jpg" alt="Card image cap">
+            <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+          </div>
+          <div class="card-body">
+            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
+              <hr>
+            </p>
+            <p class="card-text price text-center">50.000 VND</p>
+          </div>
         </div>
       </div>
     </div>
