--- a/yummy/shop.html
+++ b/yummy/shop.html
@@ -96,7 +96,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -110,7 +110,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -124,7 +124,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -138,7 +138,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -152,7 +152,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -166,7 +166,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -180,7 +180,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
@@ -194,7 +194,7 @@
             <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
           </div>
           <div class="card-body">
-            <div class="text-center"><a class="card-text name" href="cart.html">Bít Tết Bò Kobe</a></div>
+            <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
             <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
               <hr>
             </p>
