--- a/yummy/singerProduct.html
+++ b/yummy/singerProduct.html
@@ -60,11 +60,19 @@
   <div class="product_area">
     <div class="main_product row">
       <div class="col-6 image_area">
-        <div class="image_main"><img src="./images/singerProduct_Page/food1.png" alt=""></div>
-        <div class="sub_image row"> 
-          <div class="col-4 sub_product"> <img src="./images/singerProduct_Page/food1.png" alt=""></div>
-          <div class="col-4 sub_product"> <img src="./images/singerProduct_Page/food1.png" alt=""></div>
-          <div class="col-4 sub_product"> <img src="./images/singerProduct_Page/food1.png" alt=""></div>
+        <div class="slider-for">
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp5.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp1.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp2.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp3.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp4.jpeg" alt="Xem chi tiết"></div>
+        </div>
+        <div class="slider-nav">
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp5.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp1.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp2.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp3.jpg" alt="Xem chi tiết"></div>
+          <div><img width="300" height="169" src="images/singerProduct_Page/sp4.jpeg" alt="Xem chi tiết"></div>
         </div>
       </div>
       <div class="col-6 product_content_area">
@@ -121,10 +129,13 @@
   <hr>
   <div class="card-deck row">
     <div class="col-3">      
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp1.jpg" alt="Card image cap">
+      <div class="card">
+        <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp5.jpg" alt="Card image cap">
+          <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+        </div>
         <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
+          <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
+          <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
             <hr>
           </p>
           <p class="card-text price text-center">50.000 VND</p>
@@ -132,10 +143,13 @@
       </div>
     </div>
     <div class="col-3">      
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
+      <div class="card">
+        <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp1.jpg" alt="Card image cap">
+          <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+        </div>
         <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
+          <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
+          <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
             <hr>
           </p>
           <p class="card-text price text-center">50.000 VND</p>
@@ -143,10 +157,13 @@
       </div>
     </div>
     <div class="col-3">      
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp3.jpg" alt="Card image cap">
+      <div class="card">
+        <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp2.jpg" alt="Card image cap">
+          <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+        </div>
         <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
+          <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
+          <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
             <hr>
           </p>
           <p class="card-text price text-center">50.000 VND</p>
@@ -154,10 +171,13 @@
       </div>
     </div>
     <div class="col-3">      
-      <div class="card"><img class="card-img-top" src="./images/shop_Page/sp4.jpg" alt="Card image cap">
+      <div class="card">
+        <div class="hover_area"><img class="card-img-top" src="./images/shop_Page/sp3.jpg" alt="Card image cap">
+          <div class="hover_card"><a href="cart.html"><i class="fas fa-cart-plus"></i></a><a href="cart.html"><i class="fas fa-expand"></i></a><a href="cart.html"><i class="fas fa-heart"></i></a></div>
+        </div>
         <div class="card-body">
-          <p class="card-text name text-center">Bánh matcha & việt quất</p>
-          <p class="card-text tag text-center"><small class="text-muted">BÁNH NGỌT, ĐỒ UỐNG</small>
+          <div class="text-center"><a class="card-text name" href="singerProduct.html">Bít Tết Bò Kobe</a></div>
+          <p class="card-text tag text-center"><small class="text-muted">Món chính</small>
             <hr>
           </p>
           <p class="card-text price text-center">50.000 VND</p>
