--- a/yummy/about.html
+++ b/yummy/about.html
@@ -76,23 +76,23 @@
   </div>
   <div class="child-page-listing">
     <div class="grid-container">
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef1.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef1.jpg" alt="Name Chef"></a></div>
       </article>
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Name Chef"></a></div>
       </article>
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef3.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef3.jpg" alt="Name Chef"></a></div>
       </article>
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef2.jpg" alt="Name Chef"></a></div>
       </article>
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef3.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef3.jpg" alt="Name Chef"></a></div>
       </article>
-      <article class="location-listing" id="3685"><a class="location-title" href="#">Xem chi tiết</a>
-        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef4.jpg" alt="Xem chi tiết"></a></div>
+      <article class="location-listing" id="3685"><a class="location-title" href="#">Name Chef</a>
+        <div class="location-image"><a href="#"><img width="300" height="169" src="./images/about_Page/chef4.jpg" alt="Name Chef"></a></div>
       </article>
     </div>
   </div>
@@ -115,7 +115,7 @@
     <div class="post_image text-center"><img src="./images/about_Page/blog_post.png" alt="image"></div>
     <div>
       <p class="post_content">Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.</p>
-      <p class="post_detail">Xem chi tiết ...</p>
+      <p class="post_detail">Xem thêm ...</p>
     </div>
     <hr>
   </div>
@@ -178,15 +178,15 @@
         <div class="title_form text-center"> <span style="color:#FD5B00;">Liên hệ </span>với chúng tôi</div>
         <div class="form-group">
           <label for="exampleInputEmail1">Tên</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập tên">
+          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập tên gọi của bạn">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập email">
+          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập địa chỉ email">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Bình luận của bạn</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="exampleFormControlTextarea1">Tin nhắn của bạn</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Viết tin nhắn"></textarea>
         </div>
         <div class="text-center"> 
           <button class="btn" type="submit">Gửi tin nhắn</button>
