--- a/yummy/menu.html
+++ b/yummy/menu.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- fontAweSome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <!--slick-->
+  <link rel="stylesheet" type="text/css" href="js/slick/slick.css">
+  <!-- Add the new slick-theme.css if you want the default styling-->
+  <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css">
   <!-- icon-->
   <link rel="icon" href="images/core_img/favicon.ico">
   <!-- Fonts-->
@@ -19,7 +23,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/menu.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/css_parts/topHeader.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/css_parts/mainMenu.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/css_parts/footer.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/css_parts/footer2.css">
 </head>
 <header class="header_area container-fluid">
   <!--Top Header Area-->
@@ -58,7 +62,7 @@
 </header>
 <!--section1-->
 <section class="section_1 container-fluid">
-  <div class="row menu">
+  <div class="menu row">
     <div class="col-7 detail_menu">
       <p class="title"> <span style="color:#FD5B00;">Thực đơn </span>Bữa sáng</p>
       <p class="sub_title">Tất cả các ngày trong tuần 6h30-10h30</p>
@@ -121,48 +125,36 @@
 <section class="section_2 container-fluid"></section>
 <!--footer-->
 <footer class="container-fuild">
-  <div class="maps-wrapper">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3022.260812859955!2d-73.990184!3d40.756288!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb134c693ac14a04c!2sThe+TimesCenter!5e0!3m2!1sen!2suk!4v1393485725496" width="1351" height="450" frameborder="0" style="border:0"></iframe>
-  </div>
-  <div class="footer_area">
-    <div class="footer_form">
-      <div class="padding_form">
-        <div class="title_form text-center"> <span style="color:#FD5B00;">Liên hệ </span>với chúng tôi</div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Tên</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập tên">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập email">
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Bình luận của bạn</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <div class="text-center"> 
-          <button class="btn" type="submit">Gửi tin nhắn</button>
-        </div>
-      </div>
-    </div>
-    <div class="footer_main container-fluid row">
-      <div class="col-3 bottom_left text-center">
-        <div class="logo">Yummy</div>
-        <div class="top_social_bar"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
-      </div>
-      <div class="col-6"></div>
-      <div class="col-3 bottom_right text-left">
-        <div class="address"> <i class="fas fa-map-marker-alt"> </i>Tây Hồ Hà Nội</div>
-        <div class="phone"> <i class="fas fa-mobile-alt"> </i>0366312255</div>
-        <div class="email"> <i class="fas fa-envelope"></i>yummy@gmail.com</div>
-      </div>
+  <div class="top_footer">
+    <h1 class="text-center title">INSTARGRAM</h1>
+    <hr>
+    <div class="slider" id="single_item">
+      <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img1.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img2.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img3.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img4.jpg" alt="Xem chi tiết"></div>
+      <div><img width="300" height="169" src="images/home_Page/img5.jpg" alt="Xem chi tiết"></div>
     </div>
   </div>
-  <div class="footer_bottom text-center">2019 Yummy By SunKt0212</div>
+  <div class="row main_footer">
+    <div class="col-6 logo">yummy</div>
+    <div class="col-6 right_area">
+      <div class="network d-flex flex-row-reverse"><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="#"><i class="fab fa-skype" aria-hidden="true"></i></a><a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i></a></div>
+      <div class="make_by d-flex flex-row-reverse">© 2019 YUMMY. MAKED BY NHATMINH</div>
+    </div>
+  </div>
 </footer>
 <!-- Optional JavaScript-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS-->
-<script type="text/javascript" src="js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- slick-->
+<script type="text/javascript" src="js/slick/slick.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="./js/footer2.js"></script>
