--- a/yummy/singerBlog.html
+++ b/yummy/singerBlog.html
@@ -139,15 +139,15 @@
         <div class="title_form text-center"> <span style="color:#FD5B00;">Liên hệ </span>với chúng tôi</div>
         <div class="form-group">
           <label for="exampleInputEmail1">Tên</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập tên">
+          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập tên gọi của bạn">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
-          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập email">
+          <input class="form-control" id="exampleInputEmail1" type="text" aria-describedby="emailHelp" placeholder="Nhập địa chỉ email">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Bình luận của bạn</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="exampleFormControlTextarea1">Tin nhắn của bạn</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Viết tin nhắn"></textarea>
         </div>
         <div class="text-center"> 
           <button class="btn" type="submit">Gửi tin nhắn</button>
