--- a/yummy/singerProduct.html
+++ b/yummy/singerProduct.html
@@ -76,7 +76,6 @@
         </div>
       </div>
       <div class="col-6 product_content_area">
-        <div class="sub_menu">HOME > THỊT > BÍT TẾT BÒ KOBE</div>
         <p class="name_product">Bít Tết Bò Kobe</p>
         <p class="price_product">50.000 vnd</p>
         <p class="sub_product">Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, corper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui.</p>
@@ -86,7 +85,15 @@
           <p class="igd">- Kiwi</p>
           <p class="igd">- Hạt điều</p>
         </p>
+        <div class="quantity d-flex pt-2">
+          <button class="qty-decrease" onclick="" type="button">-</button>
+          <input id="qty" type="text" name="quantity" value="1" size="4">
+          <button class="qty-increase" onclick="" type="button">+</button>
+          <div class="btn_chose"><a href="cart.html">
+              <button class="btn" type="submit">Thêm vào giỏ hàng</button></a></div>
+        </div>
         <hr>
+        <div class="tag">Tags: Món chính</div>
       </div>
     </div>
   </div>
@@ -95,31 +102,32 @@
   <div class="comment">BÌNH LUẬN</div>
   <hr>
   <div class="row"> 
-    <div class="col-2 avatar_comter"><img src="" alt=""></div>
-    <div class="col-10 form_comment">
-      <div class="vote"></div>
+    <div class="col-1 avatar_comter"><img src="images/singerProduct_Page/sontung.png" alt=""></div>
+    <div class="col-11 form_comment">
+      <div class="vote"><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></div>
       <div class="name_comment">Sơn Tùng M-TP</div>
       <div class="date_comment">8/8/2019</div>
-      <div class="content_comment">Vivamus orci sem, consectetur ut stibulum a, semper ac dui. Proin aliquam mi nec hendrerit. Sed entum velit vel ip bibendum tristique. Orci sem, consectetur ut stibulum a, semper ac dui. Proin aliquam mi nec hendrerit. Sed entum velit vel ip bibendum tristique.</div>
+      <div class="content_comment">Món này quá ngon luôn. Tôi ăn hoài mà không thấy chán à. Mang một con bò đến đây cho tôi!!! Các bạn nhất định phải thử ăn qua món này nhé. Sky ơi!</div>
     </div>
   </div>
   <hr>
   <div class="post_comment">Để lại đánh giá của bạn
+    <hr>
     <div class="row">
       <div class="col-6 form-group">
         <label for="">Tên</label>
-        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Nhập tên gọi của bạn">
       </div>
       <div class="col-6 form-group">
         <label for="">Email</label>
-        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Nhập địa chỉ Email">
       </div>
     </div>
     <div class="form-group">
       <label for="">Bình luận của bạn</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Viết bình luận"></textarea>
     </div>
-    <div class="text-right">
+    <div class="text-left">
       <button class="btn" type="submit">Hoàn thành</button>
     </div>
   </div>
