--- a/yummy/checkOut.html
+++ b/yummy/checkOut.html
@@ -38,7 +38,7 @@
   </div>
   <!-- Menu-->
   <div class="menu-main container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light"><a class="navbar-brand" href="#">YUMMY</a>
+    <nav class="navbar navbar-expand-md navbar-light"><a class="navbar-brand" href="#">YUMMY</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
